lesson2/css/small.css
a:link {
    color: blue;
    text-decoration: underline;
}

a:visited {
    color: purple;
    text-decoration: underline;
}

 body {
     background-color: lightcyan;
     text-align: center;
     min-width:320px;
     font-family:'Courier New', Courier, monospace;
     color: black;
 }


main {
    display: grid;
    grid-template-columns: 1fr;
    text-align:center; 
}

footer, header {
    background-color: black;
    text-align: center;
    color:white;
    font-family: 'Oleo Script Swash Caps', cursive;
    font-weight: bold;
}

h2 {
    color: white;
    background-color: darkslategrey;
}

#alignment, #contrast, #repetition {
    background-color: darkgray;
    border-radius: 5px 5px 5px 5px;
    margin: 10px;
    border: 2px solid black;
    grid-template-columns: 1fr;
}

